--- a/project/project_app/templates/form-confirmation.html
+++ b/project/project_app/templates/form-confirmation.html
@@ -3,7 +3,10 @@
 {% block title %}
     ThanksPage
 {% endblock title %}
-{% block header %}
+{% block header-img %}
+    <header class="header--form-page">
+{% endblock header-img %}
+{% block header-text %}
       <div class="slogan container container--90">
         <div class="slogan--item">
           <h1><b>
@@ -12,4 +15,5 @@
           </b></h1>
         </div>
       </div>
-{% endblock header %}
+    </header>
+{% endblock header-text %}
