--- a/project/project_app/templates/base.html
+++ b/project/project_app/templates/base.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="{% static "css/style.css" %}" />
   </head>
   <body>
-    <header class="header--main-page">
+  {% block header-img %}{% endblock header-img %}
       <nav class="container container--70">
           {% if request.user.is_authenticated %}
             <ul class="nav--actions">
               <li class="logged-user">
-                Witaj Agata
+                Witaj {{ request.user }}
                 <ul class="dropdown">
                   <li><a href="#">Profil</a></li>
                   <li><a href="#">Ustawienia</a></li>
-                  <li><a href="#">Wyloguj</a></li>
+                  <li><a href="/logout">Wyloguj</a></li>
                 </ul>
               </li>
             </ul>
@@ -39,8 +39,7 @@
           <li><a href="/#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
-        {% block header %}{% endblock header %}
-    </header>
+        {% block header-text %}{% endblock header-text %}
 
     {% block content %}{% endblock content %}
     <footer>
