--- a/project/project_app/templates/form.html
+++ b/project/project_app/templates/form.html
@@ -3,7 +3,10 @@
 {% block title %}
     AddDonation
 {% endblock title %}
-{% block header %}
+{% block header-img %}
+    <header class="header--form-page">
+{% endblock header-img %}
+{% block header-text %}
       <div class="slogan container container--90">
         <div class="slogan--item">
           <h1><b>
@@ -31,7 +34,7 @@
         </div>
       </div>
 
-{% endblock header %}
+{% endblock header-text %}
 {% block content %}
 
     <section class="form--steps">
