--- a/project/project_app/templates/index.html
+++ b/project/project_app/templates/index.html
@@ -3,7 +3,10 @@
 {% block title %}
     LandingPage
 {% endblock title %}
-{% block header %}
+{% block header-img %}
+    <header class="header--main-page">
+{% endblock header-img %}
+{% block header-text %}
       <div class="slogan container container--90">
         <div class="slogan--item">
           <h1><b>
@@ -12,18 +15,19 @@
           </b></h1>
         </div>
       </div>
-{% endblock header %}
+    </header>
+{% endblock header-text %}
 {% block content %}
     <section id="stats" class="stats">
       <div class="container container--85">
         <div class="stats--item">
-          <em>10</em>
+          <em>{{ donation_counter }}</em>
           <h3>Oddanych worków</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius est beatae, quod accusamus illum tempora!</p>
         </div>
 
         <div class="stats--item">
-          <em>5</em>
+          <em>{{ institution_counter }}</em>
           <h3>Wspartych organizacji</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam magnam, sint nihil cupiditate quas quam.</p>
         </div>
@@ -56,8 +60,9 @@
           <p>kurier przyjedzie w dogodnym terminie</p>
         </div>
       </div>
-
-      <a href="/register" class="btn btn--large">Załóż konto</a>
+          {% if not request.user.is_authenticated %}
+            <a href="/register" class="btn btn--large">Załóż konto</a>
+            {% endif %}
     </section>
 
     <section id="about-us" class="about-us">
@@ -83,127 +88,105 @@
         <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z którymi współpracujemy. Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
 
         <ul class="help--slides-items">
-          <li>
-            <div class="col">
-              <div class="title">Fundacja "Dbam o Zdrowie"</div>
-              <div class="subtitle">Cel i misja: Pomoc dzieciom z ubogich rodzin.</div>
-            </div>
+          {% for foundation in foundations %}
+              <li>
+                <div class="col">
+                  <div class="title">Fundacja "{{ foundation }}"</div>
+                  <div class="subtitle">Cel i misja: {{ foundation.description }}.</div>
+                </div>
 
-            <div class="col"><div class="text">ubrania, jedzenie, sprzęt AGD, meble, zabawki</div></div>
-          </li>
+                <div class="col">
+                    <div class="text">{{ foundation.categories_str }}</div>
+                </div>
+              </li>
 
-          <li>
-            <div class="col">
-              <div class="title">Fundacja “Dla dzieci"</div>
-              <div class="subtitle">Cel i misja: Pomoc osobom znajdującym się w trudnej sytuacji życiowej.</div>
-            </div>
-
-            <div class="col"><div class="text">ubrania, meble, zabawki</div></div>
-          </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Fundacja “Bez domu”</div>
-              <div class="subtitle">Cel i misja: Pomoc dla osób nie posiadających miejsca zamieszkania</div>
-            </div>
-
-            <div class="col"><div class="text">ubrania, jedzenie, ciepłe koce</div></div>
-          </li>
+            {% empty %}
+            <li>
+                <p>Brak Fundacji w bazie danych</p>
+            </li>
+          {% endfor %}
         </ul>
-        <!-- Pagination
         <ul class="help--slides-pagination">
-          <li><a href="#" class="btn btn--small btn--without-border active" data-page="1">1</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="2">2</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="3">3</a></li>
+            {% for item in paginator_foundations_counter %}
+            <li><a href="#" class="btn btn--small btn--without-border active" data-page="{{ item }}">{{ item }}</a></li>
+            {% endfor %}
+{#            {% if foundations.has_previous %}#}
+{#          <li><a href="?page={{ foundations.previous_page_number }}" class="btn btn--small btn--without-border">Poprzednia strona</a></li>#}
+{#            {% endif %}#}
+{#          <li><a href="register" class="btn btn--small btn--without-border active" data-page="1">1</a></li>#}
+{#          <li><a href="#" class="btn btn--small btn--without-border" data-page="2">2</a></li>#}
+{#          <li><a href="/login" class="btn btn--small btn--without-border" data-page="3">3</a></li>#}
+{#            {% if foundations.has_next %}#}
+{#          <li><a href="#help/?page={{ foundations.next_page_number }}" class="btn btn--small btn--without-border">Następna strona {{ foundations.next_page_number }}</a></li>#}
+{#            {% endif %}#}
         </ul>
-        -->
       </div>
 
 
       <!-- SLIDE 2 -->
       <div class="help--slides" data-id="2">
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic officiis mollitia dolor, neque aspernatur accusamus debitis. Ducimus, officia. Quia, sunt illum! Non iste placeat ab ipsum alias
-          quos suscipit corporis!
-        </p>
+        <p>W naszej bazie znajdziesz listę zweryfikowanych Organizacji Pozarządowych, z którymi współpracujemy. Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
+
         <ul class="help--slides-items">
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 1</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
+        {% for institution in institutions %}
+              <li>
+                <div class="col">
+                  <div class="title">Organizacja "{{ institution }}"</div>
+                  <div class="subtitle">Cel i misja: {{ institution.description }}.</div>
+                </div>
 
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
+                <div class="col"><div class="text">
+                    {% for category in institution.categories.all %}
+                        {{ category }},
+                        {% endfor %}
+                </div></div>
+              </li>
 
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 2</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 3</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
-
-          <li>
-            <div class="col">
-              <div class="title">Organizacja 4</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
+            {% empty %}
+            <li>
+                <p>Brak Organizacji Pozarządowych w bazie danych</p>
+            </li>
+          {% endfor %}
         </ul>
-
-        <!-- Pagination
+{#        <!-- Pagination#}
         <ul class="help--slides-pagination">
-          <li><a href="#" class="btn btn--small btn--without-border active" data-page="1">1</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="2">2</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="3">3</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="4">4</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="5">5</a></li>
+            {% for item in paginator_institutions_counter %}
+            <li><a href="#" class="btn btn--small btn--without-border active" data-page="{{ item }}">{{ item }}</a></li>
+            {% endfor %}
         </ul>
-        -->
+{#        -->#}
       </div>
 
       <!-- SLIDE 3 -->
       <div class="help--slides" data-id="3">
-        <p>Lorem ipsum dolor sit amet, his ocurreret persequeris ea, ad utinam laudem duo. Verterem adipisci partiendo eos ne, ea his reque quaeque recteque, ne quo lobortis intellegam.</p>
+        <p>W naszej bazie znajdziesz listę zweryfikowanych Lokalnych Zbiórek, z którymi współpracujemy. Możesz sprawdzić czym się zajmują, komu pomagają i czego potrzebują.</p>
+
         <ul class="help--slides-items">
-          <li>
-            <div class="col">
-              <div class="title">Lokalna zbiórka 1</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
+        {% for collection in local_collections %}
+              <li>
+                <div class="col">
+                  <div class="title">Zbiórka "{{ collection }}"</div>
+                  <div class="subtitle">Cel i misja: {{ collection.description }}.</div>
+                </div>
 
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
+                <div class="col"><div class="text">
+                    {% for category in collection.categories.all %}
+                        {{ category }},
+                        {% endfor %}
+                </div></div>
+              </li>
 
-          <li>
-            <div class="col">
-              <div class="title">Lokalna zbiórka 2</div>
-              <div class="subtitle">Lorem ipsum dolor sit amet consectetur.</div>
-            </div>
-
-            <div class="col"><div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div></div>
-          </li>
+            {% empty %}
+            <li>
+                <p>Brak Lokalnych Zbiórek w bazie danych</p>
+            </li>
+          {% endfor %}
         </ul>
-
-        <!-- Pagination
         <ul class="help--slides-pagination">
-          <li><a href="#" class="btn btn--small btn--without-border active" data-page="1">1</a></li>
-          <li><a href="#" class="btn btn--small btn--without-border" data-page="2">2</a></li>
+            {% for item in paginator_local_collections_counter %}
+            <li><a href="#" class="btn btn--small btn--without-border active" data-page="{{ item }}">{{ item }}</a></li>
+            {% endfor %}
         </ul>
-        -->
       </div>
     </section>
 {% endblock content %}
