--- a/project/project_app/templates/login.html
+++ b/project/project_app/templates/login.html
@@ -3,20 +3,16 @@
 {% block title %}
     Login
 {% endblock title %}
-{% block header %}
-      <div class="slogan container container--90">
-{#      <div class="slogan--item">#}
-{#          <h1>#}
-{#            Zacznij pomagać!<br />#}
-{#            Oddaj niechciane rzeczy w zaufane ręce#}
-{#          </h1>#}
-{#        </div>#}
+{% block header-img %}
+    <header>
+{% endblock header-img %}
+{% block header-text %}
+    </header>
         <section class="login-page">
-{#          <h2>Zaloguj się</h2>#}
-        <div class="slogan--item">
-            <h1><b>Zaloguj się</b></h1>
-        </div>
-          <form>
+            <h2>Zaloguj się</h2>
+          <form method="POST">
+              <h3 style="color: red">{{ message }}</h3>
+              {% csrf_token %}
             <div class="form-group">
               <input type="email" name="email" placeholder="Email" />
             </div>
@@ -32,5 +28,4 @@
             </div>
           </form>
         </section>
-      </div>
-{% endblock header %}
+{% endblock header-text %}
