--- a/project/project_app/templates/form.html
+++ b/project/project_app/templates/form.html
@@ -74,13 +74,14 @@
             </div>
             {% endfor %}
             <div class="form-group form-group--buttons">
+              <button type="button" class="btn prev-step">Anuluj</button>
               <button type="button" class="btn next-step">Dalej</button>
             </div>
           </div>
 
           <!-- STEP 2 -->
           <div data-step="2">
-            <h3>Podaj liczbę 60l worków, w które spakowałeś/aś rzeczy:</h3>
+            <h3>Podaj liczbę 60l worków, w które spakowałeś &frasl; aś rzeczy: </h3>
 
             <div class="form-group form-group--inline">
               <label>
