--- a/project/project_app/templates/login.html
+++ b/project/project_app/templates/login.html
@@ -14,10 +14,13 @@
               <h3 style="color: red">{{ message }}</h3>
               {% csrf_token %}
             <div class="form-group">
-              <input type="email" name="email" placeholder="Email" />
+                {{ form.email }}
+{#              <input type="email" name="email" placeholder="Email" />#}
             </div>
             <div class="form-group">
-              <input type="password" name="password" placeholder="Hasło" />
+                {{ form.non_field_errors }}
+                {{ form.password }}
+{#              <input type="password" name="password" placeholder="Hasło" />#}
                 <br/>
               <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
             </div>
