--- a/project/project_app/templates/register.html
+++ b/project/project_app/templates/register.html
@@ -11,22 +11,28 @@
           <section class="login-page">
               <h2>Załóż konto</h2>
           <form method="POST">
-              <h3 style="color: red">{{ message }}</h3>
               {% csrf_token %}
             <div class="form-group">
-              <input type="text" name="name" placeholder="Imię" />
+                {{ form.name }}
+{#              <input type="text" name="name" placeholder="Imię" />#}
             </div>
              <div class="form-group">
-              <input type="text" name="surname" placeholder="Nazwisko" />
+                 {{ form.surname }}
+{#              <input type="text" name="surname" placeholder="Nazwisko" />#}
             </div>
             <div class="form-group">
-              <input type="email" name="email" placeholder="Email" />
+                {{ form.email.errors }}
+                {{ form.email }}
+{#              <input type="email" name="email" placeholder="Email" />#}
             </div>
             <div class="form-group">
-              <input type="password" name="password" placeholder="Hasło" />
+                {{ form.non_field_errors }}
+                {{ form.password }}
+{#              <input type="password" name="password" placeholder="Hasło" />#}
             </div>
             <div class="form-group">
-              <input type="password" name="password2" placeholder="Powtórz hasło" />
+                {{ form.password2 }}
+{#              <input type="password" name="password2" placeholder="Powtórz hasło" />#}
             </div>
             <div class="form-group form-group--buttons">
               <button class="btn" type="submit">Załóż konto</button>
