--- a/project/project_app/templates/base.html
+++ b/project/project_app/templates/base.html
@@ -17,7 +17,7 @@
               <li class="logged-user">
                 Witaj {{ request.user }}
                 <ul class="dropdown">
-                  <li><a href="#">Profil</a></li>
+                  <li><a href="/profile">Profil</a></li>
                   <li><a href="#">Ustawienia</a></li>
                     {% if request.user.is_superuser %}
                   <li><a href="/admin">Panel administracyjny</a></li>
