--- a/project/project_app/templates/register.html
+++ b/project/project_app/templates/register.html
@@ -13,11 +13,11 @@
           <form method="POST">
               {% csrf_token %}
             <div class="form-group">
-                {{ form.name }}
+                {{ form.first_name }}
 {#              <input type="text" name="name" placeholder="Imię" />#}
             </div>
              <div class="form-group">
-                 {{ form.surname }}
+                 {{ form.last_name }}
 {#              <input type="text" name="surname" placeholder="Nazwisko" />#}
             </div>
             <div class="form-group">
