User_change_password

--- a/project/project_app/templates/password.html
+++ b/project/project_app/templates/password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Register
+    Password
 {% endblock title %}
 {% block header-img %}
     <header>
@@ -9,29 +9,27 @@
 {% block header-text %}
     </header>
           <section class="login-page">
-              <h2>Załóż konto</h2>
+              <h2>Zmień hasło</h2>
           <form method="POST">
               {% csrf_token %}
             <div class="form-group">
-                {{ form.first_name }}
+                {{ form.password_new.errors }}
+                {{ form.password_new }}
             </div>
              <div class="form-group">
-                 {{ form.last_name }}
+                 {{ form.password_repeat }}
             </div>
             <div class="form-group">
-                {{ form.email.errors }}
                 {{ form.email }}
             </div>
             <div class="form-group">
-                {{ form.password.errors }}
-                {{ form.password }}
-            </div>
-            <div class="form-group">
-                {{ form.password_repeat }}
+                {{ form.password_check.errors }}
+                {{ form.password_check }}
             </div>
             <div class="form-group form-group--buttons">
-              <button class="btn btn--without-border" type="submit">Załóż konto</button>
-              <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>
+              <button class="btn btn--without-border" type="submit">Zapisz</button>
+              <a onclick="history.back()" class="btn btn--without-border">Wstecz</a>
+              <a href="{% url 'index' %}" class="btn btn--without-border">Anuluj</a>
             </div>
           </form>
         </section>
