--- a/project/project_app/templates/base.html
+++ b/project/project_app/templates/base.html
@@ -17,29 +17,29 @@
               <li class="logged-user">
                 Witaj {{ request.user }}
                 <ul class="dropdown">
-                  <li><a href="/profile">Profil</a></li>
-                  <li><a href="#">Ustawienia</a></li>
+                  <li><a href="{% url 'profile' %}">Profil</a></li>
+                  <li><a href="{% url 'update' %}">Ustawienia</a></li>
                     {% if request.user.is_superuser %}
-                  <li><a href="/admin">Panel administracyjny</a></li>
+                  <li><a href="{% url 'admin' %}">Panel administracyjny</a></li>
                     {% endif %}
-                  <li><a href="/logout">Wyloguj</a></li>
+                  <li><a href="{% url 'logout' %}">Wyloguj</a></li>
                 </ul>
               </li>
             </ul>
           {% else %}
             <ul class="nav--actions">
-              <li><a href="/login" class="btn btn--small btn--without-border">Zaloguj</a></li>
-              <li><a href="/register" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+              <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
+              <li><a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
             </ul>
           {% endif %}
 
         <ul>
-          <li><a href="/" class="btn btn--without-border">Start</a></li>
-          <li><a href="/#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="/#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="/#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="/add_donation" class="btn btn--without-border">Przekaż dary</a></li>
-          <li><a href="/#contact" class="btn btn--without-border">Kontakt</a></li>
+          <li><a href="{% url 'index' %}" class="btn btn--without-border">Start</a></li>
+          <li><a href="{% url 'index' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
+          <li><a href="{% url 'index' %}#about-us" class="btn btn--without-border">O nas</a></li>
+          <li><a href="{% url 'index' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
+          <li><a href="{% url 'add-donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
+          <li><a href="{% url 'index' %}#contact" class="btn btn--without-border">Kontakt</a></li>
         </ul>
       </nav>
         {% block header-text %}{% endblock header-text %}
