--- a/project/project_app/templates/login.html
+++ b/project/project_app/templates/login.html
@@ -11,23 +11,20 @@
         <section class="login-page">
             <h2>Zaloguj się</h2>
           <form method="POST">
-              <h3 style="color: red">{{ message }}</h3>
               {% csrf_token %}
             <div class="form-group">
                 {{ form.email }}
-{#              <input type="email" name="email" placeholder="Email" />#}
             </div>
             <div class="form-group">
-                {{ form.non_field_errors }}
+                {{ form.password.errors }}
                 {{ form.password }}
-{#              <input type="password" name="password" placeholder="Hasło" />#}
                 <br/>
               <a href="#" class="btn btn--small btn--without-border reset-password">Przypomnij hasło</a>
             </div>
 
             <div class="form-group form-group--buttons">
-              <button class="btn" type="submit">Zaloguj się</button>
-              <a href="/register" class="btn btn--without-border">Załóż konto</a>
+              <button class="btn btn--without-border" type="submit">Zaloguj się</button>
+              <a href="{% url 'register' %}" class="btn btn--without-border">Załóż konto</a>
             </div>
           </form>
         </section>
