--- a/project/project_app/templates/update.html
+++ b/project/project_app/templates/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Register
+    Update
 {% endblock title %}
 {% block header-img %}
     <header>
@@ -9,7 +9,7 @@
 {% block header-text %}
     </header>
           <section class="login-page">
-              <h2>Załóż konto</h2>
+              <h2>Zmień dane</h2>
           <form method="POST">
               {% csrf_token %}
             <div class="form-group">
@@ -19,19 +19,16 @@
                  {{ form.last_name }}
             </div>
             <div class="form-group">
-                {{ form.email.errors }}
                 {{ form.email }}
             </div>
             <div class="form-group">
-                {{ form.password.errors }}
-                {{ form.password }}
-            </div>
-            <div class="form-group">
-                {{ form.password_repeat }}
+                {{ form.password_check.errors }}
+                {{ form.password_check }}
             </div>
             <div class="form-group form-group--buttons">
-              <button class="btn btn--without-border" type="submit">Załóż konto</button>
-              <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj się</a>
+              <button class="btn btn--without-border" type="submit">Zapisz</button>
+              <a href="{% url 'password' %}" class="btn btn--without-border">Zmień hasło</a>
+              <a href="{% url 'index' %}" class="btn btn--without-border">Anuluj</a>
             </div>
           </form>
         </section>
