--- a/project/project_app/templates/base.html
+++ b/project/project_app/templates/base.html
@@ -1,72 +1,104 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pl">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>{% block title %}{% endblock title %}</title>
-{#    <link rel="stylesheet" href="css/style.css" />#}
-    <link rel="stylesheet" href="{% static "css/style.css" %}" />
-  </head>
-  <body>
-  {% block header-img %}{% endblock header-img %}
-      <nav class="container container--70">
-          {% if request.user.is_authenticated %}
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>{% block title %}{% endblock title %}</title>
+        <link rel="stylesheet" href="{% static "css/style.css" %}" />
+    </head>
+    <body>
+        {% block header-img %}{% endblock header-img %}
+        <nav class="container container--70">
+            {% if request.user.is_authenticated %}
             <ul class="nav--actions">
-              <li class="logged-user">
-                Witaj {{ request.user }}
-                <ul class="dropdown">
-                  <li><a href="{% url 'profile' %}">Profil</a></li>
-                  <li><a href="{% url 'update' %}">Ustawienia</a></li>
-                    {% if request.user.is_superuser %}
-                  <li><a href="{% url 'admin' %}">Panel administracyjny</a></li>
-                    {% endif %}
-                  <li><a href="{% url 'logout' %}">Wyloguj</a></li>
-                </ul>
-              </li>
+                <li class="logged-user">
+                    Witaj {{ request.user }}
+                    <ul class="dropdown">
+                        <li>
+                            <a href="{% url 'profile' %}">Profil</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'update' %}">Ustawienia</a>
+                        </li>
+                        {% if request.user.is_superuser %}
+                        <li>
+                            <a href="{% url 'admin:index' %}">Panel administracyjny</a>
+                        </li>
+                        {% endif %}
+                        <li>
+                            <a href="{% url 'logout' %}">Wyloguj</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
-          {% else %}
+            {% else %}
             <ul class="nav--actions">
-              <li><a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a></li>
-              <li><a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a></li>
+                <li>
+                    <a href="{% url 'login' %}" class="btn btn--small btn--without-border">Zaloguj</a>
+                </li>
+                <li>
+                    <a href="{% url 'register' %}" class="btn btn--small btn--highlighted">Załóż konto</a>
+                </li>
             </ul>
-          {% endif %}
-
-        <ul>
-          <li><a href="{% url 'index' %}" class="btn btn--without-border">Start</a></li>
-          <li><a href="{% url 'index' %}#steps" class="btn btn--without-border">O co chodzi?</a></li>
-          <li><a href="{% url 'index' %}#about-us" class="btn btn--without-border">O nas</a></li>
-          <li><a href="{% url 'index' %}#help" class="btn btn--without-border">Fundacje i organizacje</a></li>
-          <li><a href="{% url 'add-donation' %}" class="btn btn--without-border">Przekaż dary</a></li>
-          <li><a href="{% url 'index' %}#contact" class="btn btn--without-border">Kontakt</a></li>
-        </ul>
-      </nav>
+            {% endif %}
+            <ul>
+                <li>
+                    <a href="{% url 'index' %}" class="btn btn--without-border">Start</a>
+                </li>
+                <li>
+                    <a href="{% url 'index' %}#steps" class="btn btn--without-border">O co chodzi?</a>
+                </li>
+                <li>
+                    <a href="{% url 'index' %}#about-us" class="btn btn--without-border">O nas</a>
+                </li>
+                <li>
+                    <a href="{% url 'index' %}#help" class="btn btn--without-border">Fundacje i organizacje</a>
+                </li>
+                <li>
+                    <a href="{% url 'add-donation' %}" class="btn btn--without-border">Przekaż dary</a>
+                </li>
+                <li>
+                    <a href="{% url 'index' %}#contact" class="btn btn--without-border">Kontakt</a>
+                </li>
+            </ul>
+        </nav>
         {% block header-text %}{% endblock header-text %}
-
-    {% block content %}{% endblock content %}
-    <footer>
-      <div id="contact" class="contact">
-        <h2>Skontaktuj się z nami</h2>
-        <h3>Formularz kontaktowy</h3>
-        <form class="form--contact">
-          <div class="form-group form-group--50"><input type="text" name="name" placeholder="Imię" /></div>
-          <div class="form-group form-group--50"><input type="text" name="surname" placeholder="Nazwisko" /></div>
-
-          <div class="form-group"><textarea name="message" placeholder="Wiadomość" rows="1"></textarea></div>
-
-          <button class="btn" type="submit">Wyślij</button>
-        </form>
-      </div>
-      <div class="bottom-line">
-        <span class="bottom-line--copy">Copyright &copy; 2019</span>
-        <div class="bottom-line--icons">
-          <a href="#" class="btn btn--small"><img src="{% static "images/icon-facebook.svg" %}"/></a>
-          <a href="#" class="btn btn--small"><img src="{% static "images/icon-instagram.svg" %}"/></a>
-        </div>
-      </div>
-    </footer>
-
-    <script src="{% static "js/app.js" %}"></script>
-  </body>
+        {% block content %}{% endblock content %}
+        <footer>
+            <div id="contact" class="contact">
+                <h2>Skontaktuj się z nami</h2>
+                <h3>Formularz kontaktowy</h3>
+                <form class="form--contact" action="{% url 'contact' %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-group form-group--50">
+                        <input type="text" name="first_name" placeholder="Imię" required/>
+                    </div>
+                    <div class="form-group form-group--50">
+                        <input type="text" name="last_name" placeholder="Nazwisko" required/>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" placeholder="Email" required/>
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" placeholder="Wiadomość" rows="1" required></textarea>
+                    </div>
+                    <button class="btn" type="submit">Wyślij</button>
+                </form>
+            </div>
+            <div class="bottom-line">
+                <span class="bottom-line--copy">Copyright &copy; 2019</span>
+                <div class="bottom-line--icons">
+                    <a href="#" class="btn btn--small">
+                        <img src="{% static "images/icon-facebook.svg" %}"/>
+                    </a>
+                    <a href="#" class="btn btn--small">
+                        <img src="{% static "images/icon-instagram.svg" %}"/>
+                    </a>
+                </div>
+            </div>
+        </footer>
+        <script src="{% static "js/app.js" %}"></script>
+    </body>
 </html>
