--- a/project/project_app/templates/form.html
+++ b/project/project_app/templates/form.html
@@ -7,209 +7,193 @@
     <header class="header--form-page">
 {% endblock header-img %}
 {% block header-text %}
-      <div class="slogan container container--90">
-        <div class="slogan--item">
-          <h2>
-            Oddaj rzeczy, których już nie chcesz<br />
-            <span class="uppercase">potrzebującym</span>
-          </h2>
-
-          <div class="slogan--steps">
-            <div class="slogan--steps-title">Wystarczą 4 proste kroki:</div>
-            <ul class="slogan--steps-boxes">
-              <li>
-                <div><em>1</em><span>Wybierz rzeczy</span></div>
-              </li>
-              <li>
-                <div><em>2</em><span>Spakuj je w worki</span></div>
-              </li>
-              <li>
-                <div><em>3</em><span>Wybierz fundację</span></div>
-              </li>
-              <li>
-                <div><em>4</em><span>Zamów kuriera</span></div>
-              </li>
-            </ul>
-          </div>
+        <div class="slogan container container--90">
+            <div class="slogan--item">
+                <h2>
+                    Oddaj rzeczy, których już nie chcesz<br/><span class="uppercase">potrzebującym</span>
+                </h2>
+                <div class="slogan--steps">
+                    <div class="slogan--steps-title">Wystarczą 4 proste kroki:</div>
+                    <ul class="slogan--steps-boxes">
+                        <li>
+                            <div><em>1</em><span>Wybierz rzeczy</span></div>
+                        </li>
+                        <li>
+                            <div><em>2</em><span>Spakuj je w worki</span></div>
+                        </li>
+                        <li>
+                            <div><em>3</em><span>Wybierz fundację</span></div>
+                        </li>
+                        <li>
+                            <div><em>4</em><span>Zamów kuriera</span></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
     </header>
 {% endblock header-text %}
 {% block content %}
-
     <section class="form--steps">
-      <div class="form--steps-instructions">
-        <div class="form--steps-container">
-          <h3>Ważne!</h3>
-          <p data-step="1" class="active">
-            Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
-            wiedzieć komu najlepiej je przekazać.
-          </p>
-          <p data-step="2">
-            Uzupełnij szczegóły dotyczące Twoich rzeczy. Dzięki temu będziemy
-            wiedzieć komu najlepiej je przekazać.
-          </p>
-          <p data-step="3">
-           Wybierz jedną, do
-            której trafi Twoja przesyłka.
-          </p>
-          <p data-step="4">Podaj adres oraz termin odbioru rzeczy.</p>
+        <div class="form--steps-instructions">
+            <div class="form--steps-container">
+                <h3>Ważne!</h3>
+                <p data-step="1" class="active">
+                    Uzupełnij szczegóły dotyczące Twoich rzeczy.
+                    Dzięki temu będziemy wiedzieć komu najlepiej je przekazać.
+                </p>
+                <p data-step="2">
+                    Uzupełnij szczegóły dotyczące Twoich rzeczy.
+                    Dzięki temu będziemy wiedzieć komu najlepiej je przekazać.
+                </p>
+                <p data-step="3">
+                    Wybierz jedną, do której trafi Twoja przesyłka.
+                </p>
+                <p data-step="4">
+                    Podaj adres oraz termin odbioru rzeczy.
+                </p>
+            </div>
         </div>
-      </div>
-
-      <div class="form--steps-container">
-        <div class="form--steps-counter">Krok <span>1</span>/5</div>
-
-        <form action="form-confirmation.html" method="post">
-          <!-- STEP 1: class .active is switching steps -->
-          <div data-step="1" class="active">
-            <h3>Zaznacz co chcesz oddać:</h3>
-            {% for category in categories %}
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="checkbox" name="categories" value="{{ category.id }}"/>
-                <span class="checkbox"></span>
-                <span class="description">{{ category }}</span>
-              </label>
-            </div>
-            {% endfor %}
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Anuluj</button>
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
-
-          <!-- STEP 2 -->
-          <div data-step="2">
-            <h3>Podaj liczbę 60l worków, w które spakowałeś &frasl; aś rzeczy: </h3>
-
-            <div class="form-group form-group--inline">
-              <label>
-                Liczba 60l worków:
-                <input type="number" name="bags" step="1" min="1" />
-              </label>
-            </div>
-
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
-
-
-
-          <!-- STEP 4 -->
-          <div data-step="3">
-            <h3>Wybierz organizacje, której chcesz pomóc:</h3>
-            <h3 style="display: None">Przeprszamy </br></br> Zmień katogorie lub podziel darowiznę </br> Żadna fundacja nie spełnia tylu kategorii</h3>
-            {% for institution in institutions %}
-            <div class="form-group form-group--checkbox">
-              <label>
-                <input type="radio" name="organization" value="{{ institution.id }}" data-categories="{{ institution.category_list }}" />
-                <span class="checkbox radio"></span>
-                <span class="description">
-                  <div class="title">{% if institution.type == 1 %}Fundacja "{{ institution }}"{% elif institution.type == 2 %}Organizacja "{{ institution }}"{% else %}Zbiórka "{{ institution }}"{% endif %}</div>
-                  <div class="subtitle">Cel i misja: {{ institution.description }}</div>
-                </span>
-              </label>
-            </div>
-            {% endfor %}
-
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
-
-          <!-- STEP 5 -->
-          <div data-step="4">
-            <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
-
-            <div class="form-section form-section--columns">
-              <div class="form-section--column">
-                <h4>Adres odbioru</h4>
-                <div class="form-group form-group--inline">
-                  <label> Ulica <input type="text" name="address" /> </label>
+        <div class="form--steps-container">
+            <div class="form--steps-counter">Krok <span>1</span>/5</div>
+            <form action="form-confirmation.html" method="post">
+                <!-- STEP 1: class .active is switching steps -->
+                <div data-step="1" class="active">
+                    <h3>Zaznacz co chcesz oddać:</h3>
+                    {% for category in categories %}
+                    <div class="form-group form-group--checkbox">
+                        <label>
+                            <input type="checkbox" name="categories" value="{{ category.id }}"/>
+                            <span class="checkbox"></span>
+                            <span class="description">{{ category }}</span>
+                        </label>
+                    </div>
+                    {% endfor %}
+                    <div class="form-group form-group--buttons">
+                        <button type="button" class="btn prev-step">Anuluj</button>
+                        <button type="button" class="btn next-step">Dalej</button>
+                    </div>
                 </div>
-                <div class="form-group form-group--inline">
-                  <label> Miasto <input type="text" name="city" /> </label>
+                <!-- STEP 2 -->
+                <div data-step="2">
+                    <h3>Podaj liczbę 60l worków, w które spakowałeś &frasl; aś rzeczy:</h3>
+                    <div class="form-group form-group--inline">
+                        <label>
+                            Liczba 60l worków:
+                            <input type="number" name="bags" step="1" min="1" />
+                        </label>
+                    </div>
+                    <div class="form-group form-group--buttons">
+                        <button type="button" class="btn prev-step">Wstecz</button>
+                        <button type="button" class="btn next-step">Dalej</button>
+                    </div>
                 </div>
-                <div class="form-group form-group--inline">
-                  <label> Kod pocztowy <input type="text" name="postcode" /> </label>
+                <!-- STEP 3 -->
+                <div data-step="3">
+                    <h3>Wybierz organizacje, której chcesz pomóc:</h3>
+                    <h3>
+                        Przeprszamy </br></br>
+                        Zmień katogorie lub podziel darowiznę </br> Żadna fundacja nie spełnia tylu kategorii
+                    </h3>
+                    <div>
+                        <div class="form-group form-group--checkbox hidden-element">
+                            <label>
+                                <input type="radio" name="organization"/>
+                                <span class="checkbox radio"></span>
+                                <span class="description">
+                                    <div class="title"> </div>
+                                    <div class="subtitle"> </div>
+                                </span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group form-group--buttons">
+                        <button type="button" class="btn prev-step">Wstecz</button>
+                        <button type="button" class="btn next-step">Dalej</button>
+                    </div>
                 </div>
-                <div class="form-group form-group--inline">
-                  <label> Numer telefonu <input type="phone" name="phone" /> </label>
+                <!-- STEP 5 -->
+                <div data-step="4">
+                    <h3>Podaj adres oraz termin odbioru rzecz przez kuriera:</h3>
+                    <div class="form-section form-section--columns">
+                        <div class="form-section--column">
+                            <h4>Adres odbioru</h4>
+                            <div class="form-group form-group--inline">
+                                <label> Ulica <input type="text" name="address" /> </label>
+                            </div>
+                            <div class="form-group form-group--inline">
+                                <label> Miasto <input type="text" name="city" /> </label>
+                            </div>
+                            <div class="form-group form-group--inline">
+                                <label> Kod pocztowy <input type="text" name="postcode" /> </label>
+                            </div>
+                            <div class="form-group form-group--inline">
+                                <label> Numer telefonu <input type="phone" name="phone" /> </label>
+                            </div>
+                        </div>
+                        <div class="form-section--column">
+                            <h4>Termin odbioru</h4>
+                            <div class="form-group form-group--inline">
+                                <label> Data <input type="date" name="data" min="{{ tomorrow|date:"Y-m-d" }}"/> </label>
+                            </div>
+                            <div class="form-group form-group--inline">
+                                <label> Godzina <input type="time" name="time" value="14:00"/> </label>
+                            </div>
+                            <div class="form-group form-group--inline">
+                                <label> Uwagi dla kuriera <textarea name="more_info" rows="5"></textarea> </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group form-group--buttons">
+                        <button type="button" class="btn prev-step">Wstecz</button>
+                        <button type="button" class="btn next-step">Dalej</button>
+                    </div>
                 </div>
-              </div>
-
-              <div class="form-section--column">
-                <h4>Termin odbioru</h4>
-                <div class="form-group form-group--inline">
-                  <label> Data <input type="date" name="data" min="{{ tomorrow|date:"Y-m-d" }}"/> </label>
+                <!-- STEP 6 -->
+                <div data-step="5">
+                    <h3>Podsumowanie Twojej darowizny</h3>
+                    <div class="summary">
+                        <div class="form-section">
+                            <h4>Oddajesz:</h4>
+                                <ul>
+                                    <li>
+                                        <span class="icon icon-bag"></span>
+                                        <span class="summary--text"></span>
+                                        <span class="summary--text">&nbsp-&nbsp</span>
+                                        <span class="summary--text"></span>
+                                    </li>
+                                    <li>
+                                        <span class="icon icon-hand"></span>
+                                        <span class="summary--text"></span>
+                                    </li>
+                                </ul>
+                        </div>
+                        <div class="form-section form-section--columns">
+                            <div class="form-section--column">
+                                <h4>Adres odbioru:</h4>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                            <div class="form-section--column">
+                                <h4>Termin odbioru:</h4>
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group form-group--buttons">
+                        <button type="button" class="btn prev-step">Wstecz</button>
+                        <button type="submit" class="btn">Potwierdzam</button>
+                    </div>
                 </div>
-                <div class="form-group form-group--inline">
-                  <label> Godzina <input type="time" name="time" value="14:00"/> </label>
-                </div>
-                <div class="form-group form-group--inline">
-                  <label> Uwagi dla kuriera <textarea name="more_info" rows="5"></textarea> </label>
-                </div>
-              </div>
-            </div>
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="button" class="btn next-step">Dalej</button>
-            </div>
-          </div>
-
-          <!-- STEP 6 -->
-          <div data-step="5">
-            <h3>Podsumowanie Twojej darowizny</h3>
-
-            <div class="summary">
-              <div class="form-section">
-                <h4>Oddajesz:</h4>
-                <ul>
-                  <li>
-                    <span class="icon icon-bag"></span>
-                    <span class="summary--text"></span>
-                      <span class="summary--text">&nbsp-&nbsp</span>
-                    <span class="summary--text"></span>
-                  </li>
-                  <li>
-                    <span class="icon icon-hand"></span>
-                    <span class="summary--text"></span>
-                  </li>
-                </ul>
-              </div>
-
-              <div class="form-section form-section--columns">
-                <div class="form-section--column">
-                  <h4>Adres odbioru:</h4>
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-
-                <div class="form-section--column">
-                  <h4>Termin odbioru:</h4>
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group form-group--buttons">
-              <button type="button" class="btn prev-step">Wstecz</button>
-              <button type="submit" class="btn">Potwierdzam</button>
-            </div>
-          </div>
-        </form>
-      </div>
+            </form>
+        </div>
     </section>
 {% endblock content %}
