--- a/project/project_app/templates/form-confirmation.html
+++ b/project/project_app/templates/form-confirmation.html
@@ -30,6 +30,11 @@
                         Wypełnij porawnie formularz kontaktowy !!!<br/>
                         Spróbuj ponownie, wpisz poprawnie adres email.
                     </b>
+                    {% elif message == '4' %}
+                    <b>
+                        Dziękujemy za rejestracje w naszym serwisie !!!<br/>
+                        Na maila prześlemy link aktywacyjny.
+                    </b>
                     {% endif %}
                 </h1>
             </div>
