--- a/project/project_app/templates/login.html
+++ b/project/project_app/templates/login.html
@@ -13,7 +13,9 @@
         <form method="POST">
             {% csrf_token %}
             <div class="form-group">
+                {{ form.email.errors }}
                 {{ form.email }}
+                {{ form.token }}
             </div>
             <div class="form-group">
                 {{ form.password.errors }}
