--- a/project/project_app/templates/register.html
+++ b/project/project_app/templates/register.html
@@ -27,6 +27,7 @@
                 {{ form.password }}
             </div>
             <div class="form-group">
+                {{ form.password_repeat.errors }}
                 {{ form.password_repeat }}
             </div>
             <div class="form-group form-group--buttons">
