--- a/project/project_app/templates/reset-password.html
+++ b/project/project_app/templates/reset-password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Login
+    Reset Password
 {% endblock title %}
 {% block header-img %}
     <header>
@@ -9,24 +9,16 @@
 {% block header-text %}
     </header>
     <section class="login-page">
-        <h2>Zaloguj się</h2>
+        <h2>Resetowania hasła</h2>
         <form method="POST">
             {% csrf_token %}
             <div class="form-group">
                 {{ form.email.errors }}
                 {{ form.email }}
             </div>
-            <div class="form-group">
-                {{ form.password.errors }}
-                {{ form.password }}
-                <br/>
-                <a href="{% url 'reset-password' %}" class="btn btn--small btn--without-border reset-password">
-                    Przypomnij hasło
-                </a>
-            </div>
             <div class="form-group form-group--buttons">
-                <button class="btn btn--without-border" type="submit">Zaloguj się</button>
-                <a href="{% url 'register' %}" class="btn btn--without-border">Załóż konto</a>
+                <button class="btn btn--without-border" type="submit">Wyślij email</button>
+                <a onclick="history.back()" class="btn btn--without-border">Wstecz</a>
                 <a href="{% url 'index' %}" class="btn btn--without-border">Anuluj</a>
             </div>
         </form>
