--- a/project/project_app/templates/set-password.html
+++ b/project/project_app/templates/set-password.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    Password
+    Set Password
 {% endblock title %}
 {% block header-img %}
     <header>
@@ -9,7 +9,7 @@
 {% block header-text %}
     </header>
     <section class="login-page">
-        <h2>Zmień hasło</h2>
+        <h2>Ustaw hasło</h2>
         <form method="POST">
             {% csrf_token %}
             <div class="form-group">
@@ -23,13 +23,8 @@
             <div class="form-group">
                 {{ form.email }}
             </div>
-            <div class="form-group">
-                {{ form.password_check.errors }}
-                {{ form.password_check }}
-            </div>
             <div class="form-group form-group--buttons">
                 <button class="btn btn--without-border" type="submit">Zapisz</button>
-                <a onclick="history.back()" class="btn btn--without-border">Wstecz</a>
                 <a href="{% url 'index' %}" class="btn btn--without-border">Anuluj</a>
             </div>
         </form>
